test/Fail/CubicalWithoutGlueIsInfective.agda
{-# OPTIONS --cubical-compatible --two-level #-}

open import Cubical-without-glue-Import.Without-glue -- requires at least @--cubical-without-glue@
